--- a/my-project-backend/src/main/resources/application.yml
+++ b/my-project-backend/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-spring.application.name=my-project-backend
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/study
+    username: root
+    password: Mxk319527
+  security:
+    jwt:
+      key: abandon
+      expire: 7
